# cloud-run-rust-test

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
